Fix overlap musician photo

--- a/src/components/Musician.scss
+++ b/src/components/Musician.scss
@@ -16,7 +16,7 @@
 
   .photo {
     flex-shrink: 0;
-    width: 300px;
+    max-width: 300px;
     margin: 1em;
   }
 
